--- a/Cola.ColaCache.csproj
+++ b/Cola.ColaCache.csproj
@@ -15,6 +15,7 @@
         <PackageTags>Cola.CaCache;cola;cache</PackageTags>
         <Version>1.0.2</Version>
         <AssemblyVersion>1.0.2</AssemblyVersion>
+        <FileVersion>1.0.2</FileVersion>
     </PropertyGroup>
 
     <ItemGroup>
