--- a/Cola.ColaCache.csproj
+++ b/Cola.ColaCache.csproj
@@ -16,6 +16,9 @@
         <Version>1.0.2</Version>
         <AssemblyVersion>1.0.2</AssemblyVersion>
         <FileVersion>1.0.2</FileVersion>
+        <Title>Cola.ColaCache</Title>
+        <PackageProjectUrl>https://github.com/odinGitGmail/Cola.ColaCache</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/odinGitGmail/Cola.ColaCache</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
